--- a/templates/webhook.service.j2
+++ b/templates/webhook.service.j2
@@ -7,6 +7,7 @@ Type=simple
 User=root
 ExecStart=/usr/local/bin/forwarder.py
 ExecStop=pgrep -a forwarder.py | xargs kill -9
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
